[project]
name = "linkmint-eventbus"
version = "0.1.0"
description = "LinkMint shared Kafka client library (work15): a canonical JSON envelope + an aiokafka publisher and a commit-after-handle consumer-group consumer. Serializes byte-identically to eventbus-go, so Python and Go services interoperate on one bus. Transport is Kafka via Redpanda (ADR-011); the logical event model is workload/catalog.md. At-least-once delivery — handlers must be idempotent."
requires-python = ">=3.12"
dependencies = [
    "aiokafka>=0.11",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "structlog>=24.1",
    "opentelemetry-api>=1.27",
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "black>=24.3",
    "mypy>=1.9",
    "opentelemetry-sdk>=1.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["linkmint_eventbus"]

# ── Formatting / linting ──
[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "ASYNC"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]

# ── Typing ──
[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]
mypy_path = "src"
exclude = ["tests/"]

# aiokafka ships no py.typed; fall back to Any so a stub gap never fails the build — the wire
# contract (the Envelope) is fully typed and golden-tested.
[[tool.mypy.overrides]]
module = ["aiokafka", "aiokafka.*"]
ignore_missing_imports = true

# ── Tests / coverage ──
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=linkmint_eventbus --cov-report=term-missing --cov-fail-under=80"
markers = [
    "integration: tests that need Docker (testcontainers Redpanda)",
]

[tool.coverage.run]
source = ["linkmint_eventbus"]
omit = ["src/linkmint_eventbus/__init__.py"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
