[project]
name = "linkmint-idempotency"
version = "0.1.0"
description = "LinkMint shared idempotency helper (work17): a Redis-backed Idempotency-Key store for replay-safe state-mutating endpoints (24h TTL) plus consumer-side dedupe helpers (best-effort Redis + durable Postgres) for the at-least-once event bus (work15). Byte-compatible with idempotency-go (identical idem:<service>:<route>:<key> scheme), so Python and Go services share one Redis. The application-layer complement to the chain's on-chain anti-replay (A.7)."
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy[asyncio]>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "fakeredis>=2.20",
    "redis>=5",
    "psycopg[binary]>=3.1",
    "testcontainers[postgres,redis]>=4.5",
    "ruff>=0.4",
    "black>=24.3",
    "mypy>=1.9",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["linkmint_idempotency"]

[tool.setuptools.package-data]
linkmint_idempotency = ["py.typed", "migrations/*.sql"]

# ── Formatting / linting ──
[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "ASYNC"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]

# ── Typing ──
[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
no_implicit_optional = true
mypy_path = "src"
exclude = ["tests/"]

# ── Tests / coverage ──
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=linkmint_idempotency --cov-report=term-missing --cov-fail-under=80"
markers = [
    "integration: tests that need Docker (testcontainers Postgres/Redis)",
]

[tool.coverage.run]
source = ["linkmint_idempotency"]
omit = ["src/linkmint_idempotency/__init__.py"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
