[project]
name = "invoice-subscription"
version = "0.1.0"
description = "LinkMint invoice-subscription service (work19) — multi-line invoices that aggregate into a single backing PayLink, with the DRAFT→OPEN→PAID|VOID|OVERDUE lifecycle. Settlement truth comes from the chain (chain.paylink.verified). JWT consumer (verifier-only) of identity-service's RS256 tokens. Subscriptions are deferred to work31 (Phase 3)."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "redis>=5.0",
    "httpx>=0.27",
    "structlog>=24.1",
    "prometheus-client>=0.20",
    "cryptography>=42.0",
    "pyjwt[crypto]>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "testcontainers[postgres,redis]>=4.5",
    "fakeredis>=2.21",
    "respx>=0.21",
    "ruff>=0.4",
    "black>=24.3",
    "mypy>=1.9",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

# ── Formatting / linting ──
[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "ASYNC"]
ignore = ["B008"]  # FastAPI Depends() in defaults is the idiomatic pattern

[tool.ruff.lint.per-file-ignores]
"alembic/*" = ["E501"]
"tests/*" = ["E501"]

# ── Typing ──
[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/", "tests/"]

# work15 — the shared Kafka client lib is installed into the runtime image only (kafka mode), not the
# dev/test env (the default "log" mode never imports it). Treat it as untyped for the type check.
[[tool.mypy.overrides]]
module = ["linkmint_eventbus", "linkmint_eventbus.*"]
ignore_missing_imports = true

# ── Tests / coverage ──
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=80"
markers = [
    "integration: tests that need Docker (testcontainers Postgres/Redis)",
]

[tool.coverage.run]
source = ["app"]
omit = ["app/__init__.py"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
