[project]
name = "linkmint-ledger"
version = "0.1.0"
description = "LinkMint shared double-entry ledger helper (work16): the append-only ledger.ledger_entries schema + balanced posting/reversal/read helpers over a caller's async SQLAlchemy connection. Enforces DR==CR per currency and append-only corrections (A.6); non-custodial (A.1). Ships a byte-identical schema migration to ledger-go so Python and Go services post into one shared `ledger` schema."
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy[asyncio]>=2.0",
    "psycopg[binary]>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "testcontainers[postgres]>=4.5",
    "ruff>=0.4",
    "black>=24.3",
    "mypy>=1.9",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["linkmint_ledger"]

[tool.setuptools.package-data]
linkmint_ledger = ["py.typed", "migrations/*.sql"]

# ── Formatting / linting ──
[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "ASYNC"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]

# ── Typing ──
[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
no_implicit_optional = true
mypy_path = "src"
exclude = ["tests/"]

# ── Tests / coverage ──
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=linkmint_ledger --cov-report=term-missing --cov-fail-under=80"
markers = [
    "integration: tests that need Docker (testcontainers Postgres)",
]

[tool.coverage.run]
source = ["linkmint_ledger"]
omit = ["src/linkmint_ledger/__init__.py"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
