[project]
name = "notification-service"
version = "0.1.0"
description = "LinkMint notification-service — multi-channel delivery (SMS + email) of domain events with template rendering, a durable delivery log, and Celery/Redis retry with exponential backoff (30s/2m/10m/1h/6h, max 5). Phase-1 MVP: SMS (Africa's Talking) + email (SendGrid) via a sandbox console default; webhooks/push are Phase 2. Owns the `notify` schema. Consumes events via a typed handle() chokepoint (the work15 bus seam)."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "redis>=5.0",
    "httpx>=0.27",
    "structlog>=24.1",
    "prometheus-client>=0.20",
    "celery[redis]>=5.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "testcontainers[postgres,redis]>=4.5",
    "fakeredis>=2.21",
    "respx>=0.21",
    "ruff>=0.4",
    "black>=24.3",
    "mypy>=1.9",
    "celery-types>=0.22",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

# ── Formatting / linting ──
[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "ASYNC"]
ignore = ["B008"]  # FastAPI Depends() in defaults is the idiomatic pattern

[tool.ruff.lint.per-file-ignores]
"alembic/*" = ["E501"]
"tests/*" = ["E501"]

# ── Typing ──
[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/", "tests/"]

# Celery ships no py.typed; `celery-types` (dev dep) provides stubs. Fall back to Any if absent so a
# stub gap never fails the build — the hard delivery logic lives in the Celery-free DeliveryRunner.
[[tool.mypy.overrides]]
module = ["celery", "celery.*"]
ignore_missing_imports = true

# work15 — the shared Kafka client lib is installed into the runtime image only (consumer enabled),
# not the dev/test env (the default disabled path never imports it). Treat it as untyped.
[[tool.mypy.overrides]]
module = ["linkmint_eventbus", "linkmint_eventbus.*"]
ignore_missing_imports = true

# ── Tests / coverage ──
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=80"
markers = [
    "integration: tests that need Docker (testcontainers Postgres/Redis)",
]

[tool.coverage.run]
source = ["app"]
omit = ["app/__init__.py"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
