[project]
name = "linkmint-telemetry"
version = "0.1.0"
description = "LinkMint shared OpenTelemetry helper for Python services (work18): tracer init (OTLP→Tempo), a pure-ASGI middleware that starts a server span + records Prometheus HTTP metrics + unifies the trace_id correlation id, a structlog processor, an outbound httpx injector, and Celery trace-threading helpers. The Python half of the telemetry-go / telemetry-python pair — both speak W3C trace context so a trace_id follows a request across HTTP and the Kafka bus in either language. Tracing is a no-op until OTEL_EXPORTER_OTLP_ENDPOINT is set."
requires-python = ">=3.12"
dependencies = [
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-grpc>=1.27",
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "black>=24.3",
    "mypy>=1.9",
    "fastapi>=0.110",
    "httpx>=0.27",
    "starlette>=0.37",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["linkmint_telemetry"]

# ── Formatting / linting ──
[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "ASYNC"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]

# ── Typing ──
[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
no_implicit_optional = true
mypy_path = "src"
exclude = ["tests/"]

# prometheus_client / starlette / httpx are typed or stubbed loosely; never fail the build on a
# third-party stub gap — our own surface (the middleware + helpers) is fully typed and tested.
[[tool.mypy.overrides]]
module = ["prometheus_client", "prometheus_client.*", "starlette", "starlette.*", "httpx", "httpx.*"]
ignore_missing_imports = true

# ── Tests / coverage ──
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=linkmint_telemetry --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["linkmint_telemetry"]
omit = ["src/linkmint_telemetry/__init__.py"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
